Changed license to GPL v2

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 
 
-(C) 2009, Bjoern Rennhak, under an MIT licence. http://www.opensource.org/licenses/mit-license.php
+(C) 2009, Bjoern Rennhak, under an GPL v2 licence. http://www.gnu.org/licenses/gpl-2.0.txt
